<resources>
    <string name="app_name">Movies Catalog</string>
    <string name="popular">Popular</string>
    <string name="most_popular_movies">Most popular movies</string>
    <string name="error_fetch_movies">Please check your internet connection</string>
    <string name="top_rated">Top Rated</string>
    <string name="highest_rated_movies">Highest rated movies of all time</string>
    <string name="upcoming">Upcoming</string>
    <string name="stay_updated">Stay updated with the latest movies</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="editprofile">Edit Profile</string>
    <string name="hi_name">Welcome</string>
    <string name="now_playing">Now Playing</string>
    <string name="popular2">Popular</string>
    <string name="up_coming">Up Coming</string>
    <string name="top_rated2">Top Rated</string>
    <string name="title">Title</string>
    <string name="_1_1">1.1</string>
    <string name="detail_movies">Detail Movies</string>
    <string name="status">Status</string>
    <string name="genre">Genre:</string>
    <string name="rating">Rating:</string>
    <string name="release_date">Release Date:</string>
    <string name="overview">Overview</string>
    <string name="profile_user">Profile User</string>
    <string name="logout">Logout</string>
    <string name="next">Next</string>
    <string name="get_started">Get Started</string>
    <string name="username">Username</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account?</string>
    <string name="login">Login</string>
    <string name="start">Welcome Let\'s Get Started !</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>
    <string name="have_account">Don\'t have an account? %1$s</string>
    <string name="phone_number">Phone Number</string>
    <string name="age">Birthday</string>
    <string name="address">Address</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save">Save</string>
    <string name="delete_account">Delete Account</string>
    <string name="app_logo">TMDB</string>

</resources>
